[project]
name = "test2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyqt5",
    "torchvision"
]

[tool.uv.sources]
torchvision = [
    { index = "nexus-das", marker = "sys_platform == 'linux'" }
]

pyqt5 = { url = "http://172.20.0.240:8081/repository/das/packages/pyqt5/5.15.11/PyQt5-5.15.11-cp38-abi3-manylinux_2_17_aarch64.whl" }

[[tool.uv.index]]
name = "nexus-das"
url = "http://172.20.0.240:8081/repository/das/simple/"
explicit = true
